force-app/main/default/objects/Registration_Payment_Account__c/Registration_Payment_Account__c.object-meta.xml
<CustomObject>
    <label>Registration Payment Account</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Registration Payment Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Payment Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>