force-app/main/default/objects/Registration_Payment_Account__c/fields/Drawee_Bank__c.field-meta.xml
<CustomField>
    <fullName>Drawee_Bank__c</fullName>
    <label>Drawee Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi Commercial Bank</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic Bank</fullName>
            </value>
            <value>
                <fullName>Arab Bank plc</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank Melli Iran</fullName>
            </value>
            <value>
                <fullName>Bank Saderat Iran</fullName>
            </value>
            <value>
                <fullName>Emirates Investment Bank</fullName>
            </value>
            <value>
                <fullName>Zbavit Bank (ZB BANK)</fullName>
            </value>
            <value>
                <fullName>Bank of Sharjah</fullName>
            </value>
            <value>
                <fullName>Citibank N.A., United Arab Emirates</fullName>
            </value>
            <value>
                <fullName>Commercial Bank International</fullName>
            </value>
            <value>
                <fullName>Commercial Bank of Dubai</fullName>
            </value>
            <value>
                <fullName>Dubai Islamic Bank</fullName>
            </value>
            <value>
                <fullName>Emirates Islamic</fullName>
            </value>
            <value>
                <fullName>First Gulf Bank</fullName>
            </value>
            <value>
                <fullName>Habib Bank AG Zurich</fullName>
            </value>
            <value>
                <fullName>Habib Bank Limited (HBL)</fullName>
            </value>
            <value>
                <fullName>HSBC Bank Middle East Limited</fullName>
            </value>
            <value>
                <fullName>Invest Bank</fullName>
            </value>
            <value>
                <fullName>Mashreq</fullName>
            </value>
            <value>
                <fullName>National Bank of Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>Emirates NBD</fullName>
            </value>
            <value>
                <fullName>National Bank of Fujairah</fullName>
            </value>
            <value>
                <fullName>National Bank of Umm Al-Qaiwain</fullName>
            </value>
            <value>
                <fullName>Noor Bank</fullName>
            </value>
            <value>
                <fullName>National Bank of Ras Al-Khaimah PJSC (RAKBANK)</fullName>
            </value>
            <value>
                <fullName>Sharjah Islamic Bank</fullName>
            </value>
            <value>
                <fullName>Standard Chartered Bank (United Arab Emirates) Limited</fullName>
            </value>
            <value>
                <fullName>United Bank Limited (UBL)</fullName>
            </value>
            <value>
                <fullName>Union National Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>