force-app/main/default/objects/Registration_Payment_Account__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Registration Payment Accounts</relationshipLabel>
    <relationshipName>Registration_Payment_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>